# SET10108-Parallel

./: .gitignore  README.md
lab01/sources/: CMakeLists.txt  excercises.txt
lab01/sources/exercise01/: exercise01.cpp
lab01/sources/exercise02/: exercise02.cpp
lab01/sources/exercise03/: exercise03.cpp  montecarlo_lambda.csv
lab01/sources/exercise04/: exercise04.cpp  montecarlo_finer_times.csv
lab01/sources/lab01/: data.csv  lab01.cpp  montecarlo.csv
lab02/: CMakeLists.txt  exercises.txt
lab02/sources/: CMakeLists.txt
lab02/sources/atomic/: atomic.cpp
lab02/sources/atomic_flag/: atomic_flag.cpp
lab02/sources/condition_var/: condition_var.cpp
lab02/sources/exercise01-3_deadlock/: deadlock.cpp
lab02/sources/exercise01_montecarlo/: montecarlo_revisited.cpp
lab02/sources/exercise02-2_montecarlo_atomic/: montecarlo_atomic.cpp
lab02/sources/exercise03-2_mandelbrot/: mandelbrot.cpp
lab02/sources/guarded_obj/: guarded_obj.cpp  guarded_obj.h  main.cpp
lab02/sources/mutex/: mutex.cpp  mutex.h
lab02/sources/thread_safe_stack/: main.cpp  thread_safe_stack.h
lab03/: CMakeLists.txt  exercises.txt
lab03/sources/: CMakeLists.txt  hello_world_omp.cpp
lab03/sources/bubble_sort/: bubble_sort.cpp
lab03/sources/bubble_sort_parallel/: bubble_sort.cpp
lab03/sources/fractal_omp/: fractal_omp.cpp
lab03/sources/pi/: pi.cpp
lab03/sources/scheduling/: scheduling.cpp
lab03/sources/trapezoidal_curve/: trapezoidal_curve.cpp
lab04/: CMakeLists.txt  exercises.txt
lab04/sources/: CMakeLists.txt
lab04/sources/aligned_memory/: aligned_memory.cpp
lab04/sources/normalize_vector/: normalize_vector.cpp
lab04/sources/playground_simd_instr/: playground_simd_instr.cpp
lab04/sources/simd_operations/: simd_operations.cpp
lab05/: CMakeLists.txt  exercises.txt
lab05/source/: CMakeLists.txt
lab05/source/broadcast/: main.cpp
lab05/source/hello_mpi/: hello_mpi.cpp
lab05/source/map_reduce/: main.cpp
lab05/source/scatter_gather/: main.cpp
lab05/source/send_receive/: main.cpp
lab06/: CMakeLists.txt  exercises.txt
lab06/source/: CMakeLists.txt
lab06/source/latency/: main.cpp
lab06/source/mandelbrot_mpi/: main.cpp
lab06/source/parallel_sort/: main.cpp
lab06/source/trapezoidal_rule_mpi/: main.cpp
lab07/: CMakeLists.txt
lab07/source/: CMakeLists.txt
lab07/source/load_opencl_kernel/: main.cpp  vec-add.cl
lab07/source/matrix_multiplication_opencl/: main.cpp  matrix_mult.cl
lab07/source/opencl_info/: main.cpp
lab07/source/opencl_init/: main.cpp
lab08/: CMakeLists.txt
lab08/source/: CMakeLists.txt
lab08/source/cuda_init/: main.cpp
lab08/source/vec_add/: main.cu
